[metadata]
name = <package name>
version = <package version>
summary = <summary infomation>
description-file = README.md
author = <your name>
author_email = <your email>
maintainer = <your name>
maintainer_email = <your email>
home_page = <home page of this package>
platforms = x86_64
license = <your license>
classifier =
    Environment :: <some environment>
    Intended Audience :: Information Technology
    Intended Audience :: System Adiministrators
    License :: OSI Approved :: Apache Software License
    Operation System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[files]
packages = demo
